{
    "name": "InputActions",
    "maps": [
        {
            "name": "GamePlayingInput",
            "id": "6677874e-3e28-46d5-be90-ad126075e14d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "96e64d7e-c260-4bda-9832-8b5cc3c2d0c4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Mouse_Left",
                    "type": "Button",
                    "id": "e6d12c18-80dc-412f-bad3-14bab841a588",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse_Right",
                    "type": "Button",
                    "id": "0dbcd1be-731b-4343-bc93-044d0b4583e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "0df33e8b-fefd-4bf3-a23b-a3d490f2990e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cb5bc5c7-98f1-457a-afd1-f53abf29b2df",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ce40a52b-db52-4eff-b64a-85dea64aa24c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a8ce9038-aa4c-4d71-9bbe-d6955626f742",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3eb3defd-d6d3-4549-b5c3-cf0878b2ab2c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "048f234c-9c8a-481e-bd32-93cc4a6e6c3e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5ef8ca9-bc01-4391-943f-9ff5f3def1c9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GamePausedInput",
            "id": "4c1f73fa-94e8-4306-9006-6e360e2655fa",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "b5c13f43-2f02-4b95-b204-c7c6b036f5c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "74711d98-32cc-48e7-9175-91388644dd5c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}